--- a/.github/workflows/ci-cd_vagtplan-frontend.yml
+++ b/.github/workflows/ci-cd_vagtplan-frontend.yml
@@ -29,9 +29,9 @@ jobs:
         run: npm i
         working-directory: .
 
-      - name: Run ESLint
-        run: npm run lint
-        working-directory: .
+      #- name: Run ESLint
+      #  run: npm run lint
+      #  working-directory: .
 
       # - name: Run tests
       #   run: npm test
